--- a/water-counter/src/App.css
+++ b/water-counter/src/App.css
@@ -1,42 +1,68 @@
-.App {
+/* water css */
+
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Open Sans', sans-serif;
+  background: #222;
+}
+
+.cup {
+  width: 200px;
+  height: 200px;
+  border: 10px solid #ccc;
+  line-height: 200px;
+  border-radius: 10px;
+  text-align: center;
+  color: #ddd;
+  font-weight: 600;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+}
+
+.water {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #00acee;
+}
+
+/* button css  */
+
+.Plus {
+  background: #222;
+  color: #ccc;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+  width: 225px;
+  text-transform: uppercase;
+  border: 10px solid #ccc;
+  border-radius: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+.Plus:hover {
+  background: #ccc;
+  color: #222;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  width: 225px;
+  text-transform: uppercase;
+  border: 10px solid #ccc;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
 }
